added main section accomondation and most popular + footer / organised css with comments

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       </div>
       <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </section>
-    <main>
-      <section id="accomondation">
+    <main id="main_container">
+      <section class="main_cards_ui" id="accomondation">
         <h2 class="heading_accomondation">Hébergements à Marseille</h2>
         <div class="grid_cards">
           <div class="card">
@@ -170,9 +170,112 @@
               </div>
             </div>
           </div>
+          <a class="link_accomondation_plus" href="#">Afficher Plus</a>
+        </div>
+      </section>
+      <section id="most_popular" class="main_cards_ui">
+        <div class="header_most_pop">
+          <h2 class="heading_most_pop">Hébergements à Marseille</h2>
+          <i class="fa-solid fa-chart-line"></i>
+        </div>
+        <div class="cards_most_pop">
+          <div class="card" id="card_most_popular">
+            <img
+              src="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+              alt="img_hebergements_marcus_loke"
+            />
+            <div class="container">
+              <div class="heading_card_most_pop">
+                <h3 class="heading_card">Hôtel Le soleil du matin</h3>
+                <p class="text_card">Nuit à partir de 128€</p>
+              </div>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star star-grey"></i>
+              </div>
+            </div>
+          </div>
+          <div class="card" id="card_most_popular">
+            <img
+              src="/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+              alt="img_hebergements_marcus_loke"
+            />
+            <div class="container">
+              <div class="heading_card_most_pop">
+                <h3 class="heading_card">Chambres d’hôtes Au cœur de l’eau</h3>
+                <p class="text_card">Nuit à partir de 71€</p>
+              </div>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star star-grey"></i>
+              </div>
+            </div>
+          </div>
+          <div class="card" id="card_most_popular">
+            <img
+              src="/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+              alt="img_hebergements_marcus_loke"
+            />
+            <div class="container">
+              <div class="heading_card_most_pop">
+                <h3 class="heading_card">Hôtel Bleu et Blanc</h3>
+                <p class="text_card">Nuit à partir de 68€</p>
+              </div>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star star-grey"></i>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer id="footer">
+      <div class="about">
+        <h3>À propos</h3>
+        <ul class="list_footer">
+          <li>
+            <a href="#">Fonctionnement du site</a>
+          </li>
+          <li>
+            <a href="#">Conditions générales </a>
+          </li>
+          <li>
+            <a href="#">Données et confidentialité</a>
+          </li>
+        </ul>
+      </div>
+      <div class="accom">
+        <h3>Nos hébergements</h3>
+        <ul class="list_footer">
+          <li>
+            <a href="#">Charte qualité</a>
+          </li>
+          <li>
+            <a href="#">Proposer votre hôtel</a>
+          </li>
+        </ul>
+      </div>
+      <div class="help">
+        <h3>Assistance</h3>
+        <ul class="list_footer">
+          <li>
+            <a href="#">Centre d’aide</a>
+          </li>
+          <li>
+            <a href="#">Nous contacter</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
