added mobile responsiveness for navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           src="/images/logo/Booki.png"
           alt="bookie-logo"
         />
-        <section>
+        <section class="nav_elements">
           <a class="nav_link" href="#accomondation">Hébergements</a>
           <a class="nav_link" href="#section_activities">Activités</a>
         </section>
@@ -64,7 +64,7 @@
       <div class="icon_info">
         <i class="fa-solid fa-info"></i>
       </div>
-      <p>Plus de 500 logements sont disponibles dans cette ville</p>
+      <span>Plus de 500 logements sont disponibles dans cette ville</span>
     </section>
     <main id="main_container">
       <section class="main_cards_ui" id="accomondation">
