mobile view activities / search bar looking glass icon / links added on activities cards

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <i class="fa-solid fa-location-dot"></i>
           </button>
           <input type="text" name="search" placeholder="Marseille, France" />
-          <button class="btn_form btn_search">Rechercher</button>
+          <button class="btn_form btn_search btn_text">Rechercher</button>
+          <button class="btn_form btn_search btn_icon"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
       </section>
       <section class="filter_container">
@@ -189,7 +190,7 @@
       </section>
       <section id="most_popular" class="main_cards_ui">
         <div class="header_most_pop">
-          <h2 class="heading_most_pop">Hébergements à Marseille</h2>
+          <h2 class="heading_most_pop">Les plus populaires</h2>
           <a href="#">
             <i class="fa-solid fa-chart-line"></i>
           </a>
@@ -264,42 +265,50 @@
     <section id="section_activities">
       <h2 class="heading_activities">Activités à Marseille</h2>
       <div class="activities">
-        <div class="card" id="card_activities">
-          <img
-            src="/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-            alt="img_vieux_port"
-          />
-          <div class="container_activities">
-            <h3 class="heading_card">Vieux-Port</h3>
+        <a href="#">
+          <div class="card" id="card_activities">
+            <img
+              src="/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+              alt="img_vieux_port"
+            />
+            <div class="container_activities">
+              <h3 class="heading_card">Vieux-Port</h3>
+            </div>
           </div>
-        </div>
-        <div class="card" id="card_activities">
-          <img
-            src="/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-            alt="img_fort_de_pomegues"
-          />
-          <div class="container_activities">
-            <h3 class="heading_card">Fort de Pomègues</h3>
+        </a>
+        <a href="#">
+          <div class="card" id="card_activities">
+            <img
+              src="/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+              alt="img_fort_de_pomegues"
+            />
+            <div class="container_activities">
+              <h3 class="heading_card">Fort de Pomègues</h3>
+            </div>
           </div>
-        </div>
-        <div class="card" id="card_activities">
-          <img
-            src="/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-            alt="img_parc_natinal_des_calanques"
-          />
-          <div class="container_activities">
-            <h3 class="heading_card">Parc national des Calanques</h3>
+        </a>
+        <a href="#">
+          <div class="card" id="card_activities">
+            <img
+              src="/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+              alt="img_parc_natinal_des_calanques"
+            />
+            <div class="container_activities">
+              <h3 class="heading_card">Parc national des Calanques</h3>
+            </div>
           </div>
-        </div>
-        <div class="card" id="card_activities">
-          <img
-            src="/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-            alt="img_notre_dame_de_la_garde"
-          />
-          <div class="container_activities">
-            <h3 class="heading_card">Notre-Dame-de-la-Garde</h3>
+        </a>
+        <a href="#">
+          <div class="card" id="card_activities">
+            <img
+              src="/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+              alt="img_notre_dame_de_la_garde"
+            />
+            <div class="container_activities">
+              <h3 class="heading_card">Notre-Dame-de-la-Garde</h3>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </section>
     <footer id="footer">
