changes to responsiveness card grid accomondations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           </button>
           <input type="text" name="search" placeholder="Marseille, France" />
           <button class="btn_form btn_search btn_text">Rechercher</button>
-          <button class="btn_form btn_search btn_icon"><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button class="btn_form btn_search btn_icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </form>
       </section>
       <section class="filter_container">
@@ -70,121 +72,121 @@
     <main id="main_container">
       <section class="main_cards_ui" id="accomondation">
         <h2 class="heading_accomondation">Hébergements à Marseille</h2>
-        <a href="#">
         <div class="grid_cards">
-          <div class="card">
-            <img
-              src="/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-              alt="img_auberge_la_canebière"
-            />
-            <div class="container">
-              <h3 class="heading_card">Auberge La Canebière</h3>
-              <p class="text_card">Nuit à partir de 25€</p>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+          <a href="#">
+            <div class="card">
+              <img
+                src="/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                alt="img_auberge_la_canebière"
+              />
+              <div class="container">
+                <h3 class="heading_card">Auberge La Canebière</h3>
+                <p class="text_card">Nuit à partir de 25€</p>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="#">
-          <div class="card">
-            <img
-              src="/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-              alt="img_hotel_du_port"
-            />
-            <div class="container">
-              <h3 class="heading_card">Hôtel du port</h3>
-              <p class="text_card">Nuit à partir de 52€</p>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+          </a>
+          <a href="#">
+            <div class="card">
+              <img
+                src="/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                alt="img_hotel_du_port"
+              />
+              <div class="container">
+                <h3 class="heading_card">Hôtel du port</h3>
+                <p class="text_card">Nuit à partir de 52€</p>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="#">
-          <div class="card">
-            <img
-              src="/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-              alt="img_hotel_les_mouettes"
-            />
-            <div class="container">
-              <h3 class="heading_card">Hôtel Les mouettes</h3>
-              <p class="text_card">Nuit à partir de 76€</p>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+          </a>
+          <a href="#">
+            <div class="card">
+              <img
+                src="/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                alt="img_hotel_les_mouettes"
+              />
+              <div class="container">
+                <h3 class="heading_card">Hôtel Les mouettes</h3>
+                <p class="text_card">Nuit à partir de 76€</p>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="#">
-          <div class="card">
-            <img
-              src="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-              alt="img_hotel_de_la_mer"
-            />
-            <div class="container">
-              <h3 class="heading_card">Hôtel de la mer</h3>
-              <p class="text_card">Nuit à partir de 46€</p>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+          </a>
+          <a href="#">
+            <div class="card">
+              <img
+                src="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                alt="img_hotel_de_la_mer"
+              />
+              <div class="container">
+                <h3 class="heading_card">Hôtel de la mer</h3>
+                <p class="text_card">Nuit à partir de 46€</p>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="#">
-          <div class="card">
-            <img
-              src="/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-              alt="img_auberge_le_panier"
-            />
-            <div class="container">
-              <h3 class="heading_card">Auberge Le Panier</h3>
-              <p class="text_card">Nuit à partir de 23€</p>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+          </a>
+          <a href="#">
+            <div class="card">
+              <img
+                src="/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                alt="img_auberge_le_panier"
+              />
+              <div class="container">
+                <h3 class="heading_card">Auberge Le Panier</h3>
+                <p class="text_card">Nuit à partir de 23€</p>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="#">
-          <div class="card">
-            <img
-              src="/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-              alt="img_hotel_chez_amina"
-            />
-            <div class="container">
-              <h3 class="heading_card">Hôtel Chez Amina</h3>
-              <p class="text_card">Nuit à partir de 96€</p>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+          </a>
+          <a href="#">
+            <div class="card">
+              <img
+                src="/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                alt="img_hotel_chez_amina"
+              />
+              <div class="container">
+                <h3 class="heading_card">Hôtel Chez Amina</h3>
+                <p class="text_card">Nuit à partir de 96€</p>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
+          </a>
           <a class="link_accomondation_plus" href="#">Afficher Plus</a>
         </div>
       </section>
@@ -197,75 +199,77 @@
         </div>
         <div class="cards_most_pop">
           <a href="#" class="link_most_pop">
-          <div class="card" id="card_most_popular">
-            <img
-              src="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-              alt="img_hotel_le_soleil_du_matin"
-            />
-            <div class="container">
-              <div class="heading_card_most_pop">
-                <h3 class="heading_card">Hôtel Le soleil du matin</h3>
-                <p class="text_card">Nuit à partir de 128€</p>
-              </div>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="link_most_pop">
-          <div class="card" id="card_most_popular">
-            <img
-              src="/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-              alt="img_chambres_dhotes_au_coeur"
-            />
-            <div class="container">
-              <div class="heading_card_most_pop">
-                <h3 class="heading_card">Chambres d’hôtes Au cœur de l’eau</h3>
-                <p class="text_card">Nuit à partir de 71€</p>
-              </div>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+            <div class="card" id="card_most_popular">
+              <img
+                src="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt="img_hotel_le_soleil_du_matin"
+              />
+              <div class="container">
+                <div class="heading_card_most_pop">
+                  <h3 class="heading_card">Hôtel Le soleil du matin</h3>
+                  <p class="text_card">Nuit à partir de 128€</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="#" class="link_most_pop">
-          <div class="card" id="card_most_popular">
-            <img
-              src="/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-              alt="img_hotel_bleu_et_blanc"
-            />
-            <div class="container">
-              <div class="heading_card_most_pop">
-                <h3 class="heading_card">Hôtel Bleu et Blanc</h3>
-                <p class="text_card">Nuit à partir de 68€</p>
-              </div>
-              <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star star-grey"></i>
+          </a>
+          <a href="#" class="link_most_pop">
+            <div class="card" id="card_most_popular">
+              <img
+                src="/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                alt="img_chambres_dhotes_au_coeur"
+              />
+              <div class="container">
+                <div class="heading_card_most_pop">
+                  <h3 class="heading_card">
+                    Chambres d’hôtes Au cœur de l’eau
+                  </h3>
+                  <p class="text_card">Nuit à partir de 71€</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
+          </a>
+          <a href="#" class="link_most_pop">
+            <div class="card" id="card_most_popular">
+              <img
+                src="/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                alt="img_hotel_bleu_et_blanc"
+              />
+              <div class="container">
+                <div class="heading_card_most_pop">
+                  <h3 class="heading_card">Hôtel Bleu et Blanc</h3>
+                  <p class="text_card">Nuit à partir de 68€</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star star-grey"></i>
+                </div>
+              </div>
+            </div>
+          </a>
         </div>
       </section>
     </main>
     <section id="section_activities">
       <h2 class="heading_activities">Activités à Marseille</h2>
       <div class="activities">
-        <a href="#">
+        <a href="#" class="link_activities">
           <div class="card" id="card_activities">
             <img
               src="/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
@@ -276,7 +280,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="#" class="link_activities">
           <div class="card" id="card_activities">
             <img
               src="/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
@@ -287,7 +291,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="#" class="link_activities">
           <div class="card" id="card_activities">
             <img
               src="/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
@@ -298,7 +302,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="#" class="link_activities">
           <div class="card" id="card_activities">
             <img
               src="/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
