changed fontawesome script tag to link tag

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookie</title>
     <link rel="stylesheet" href="styles.css" />
-    <script
-      src="https://kit.fontawesome.com/d1a99bc0f9.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
   </head>
   <body>
     <header>
@@ -32,12 +32,12 @@
       <section class="search_bar">
         <form action="submit">
           <button class="btn_form btn_location">
-            <i class="fa-solid fa-location-dot"></i>
+            <i class="fa-location-dot fas fa-map-marker-alt"></i>
           </button>
           <input type="text" name="search" placeholder="Marseille, France" />
           <button class="btn_form btn_search btn_text">Rechercher</button>
           <button class="btn_form btn_search btn_icon">
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fas fa-search"></i>
           </button>
         </form>
       </section>
