--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -11,25 +12,25 @@
     />
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <img
-          class="img_logo_nav"
-          src="/images/logo/Booki.png"
-          alt="bookie-logo"
-        />
-        <section class="nav_elements">
-          <a class="nav_link" href="#accomondation">Hébergements</a>
-          <a class="nav_link" href="#section_activities">Activités</a>
-        </section>
-      </nav>
-      <section class="section_heading">
+    <nav class="navbar">
+      <img
+        class="img_logo_nav"
+        src="/images/logo/Booki.png"
+        alt="bookie-logo"
+      />
+      <div class="nav_elements">
+        <a class="nav_link" href="#accomondation">Hébergements</a>
+        <a class="nav_link" href="#section_activities">Activités</a>
+      </div>
+    </nav>
+    <section>
+      <div class="section_heading">
         <h1 class="heading">
           Trouvez votre hébergement pour des vacances de rêve
         </h1>
         <p>En plein centre-ville ou en pleine nature</p>
-      </section>
-      <section class="search_bar">
+      </div>
+      <div class="search_bar">
         <form action="submit">
           <button class="btn_form btn_location">
             <i class="fa-location-dot fas fa-map-marker-alt"></i>
@@ -40,8 +41,8 @@
             <i class="fas fa-search"></i>
           </button>
         </form>
-      </section>
-      <section class="filter_container">
+      </div>
+      <div id="filter_container">
         <h2 class="heading_filter">Filtres</h2>
         <div class="filter">
           <a href="#" class="filter_link">
@@ -61,8 +62,8 @@
             <h2 class="title_link">Animaux autorisés</h2>
           </a>
         </div>
-      </section>
-    </header>
+      </div>
+    </section>
     <section class="info_accomondation">
       <div class="icon_info">
         <i class="fa-solid fa-info"></i>
@@ -191,7 +192,7 @@
         </div>
       </section>
       <section id="most_popular" class="main_cards_ui">
-        <div class="header_most_pop">
+        <div id="header_most_pop">
           <h2 class="heading_most_pop">Les plus populaires</h2>
           <a href="#">
             <i class="fa-solid fa-chart-line"></i>
